@@ -42,13 +42,9 @@ public:
 
     static int SaveBehind(SkCanvas* canvas, const SkRect* subset);
 
-    // Operating within the canvas' clip stack, this resets the geometry of the clip to be an
-    // intersection with the device-space 'rect'. If 'rect' is null, this will use the rect that
-    // was last set using androidFramework_setDeviceClipRestriction on the canvas. If that was never
-    // set, it will restrict the clip to the canvas' dimensions.
-    //
-    // TODO: Eventually, make 'rect' non-optional and no longer store the restriction per canvas.
-    static void ReplaceClip(SkCanvas* canvas, const SkIRect* rect = nullptr);
+    // Operating within the canvas' clip stack, this resets the geometry of the clip to be wide
+    // open modula any device clip restriction that was set outside of the clip stack.
+    static void ResetClip(SkCanvas* canvas);
 
     /**
      * Unrolls a chain of nested SkPaintFilterCanvas to return the base wrapped canvas.
