@@ -34,18 +34,8 @@ int SkAndroidFrameworkUtils::SaveBehind(SkCanvas* canvas, const SkRect* subset) 
     return canvas->only_axis_aligned_saveBehind(subset);
 }
 
-void SkAndroidFrameworkUtils::ReplaceClip(SkCanvas* canvas, const SkIRect* rect) {
-    SkIRect deviceRestriction;
-    if (!rect) {
-        if (canvas->fClipRestrictionRect.isEmpty()) {
-            deviceRestriction = canvas->imageInfo().bounds();
-        } else {
-            deviceRestriction = canvas->fClipRestrictionRect;
-        }
-    } else {
-        deviceRestriction = *rect;
-    }
-    canvas->androidFramework_replaceClip(deviceRestriction);
+void SkAndroidFrameworkUtils::ResetClip(SkCanvas* canvas) {
+    canvas->internal_private_resetClip();
 }
 
 SkCanvas* SkAndroidFrameworkUtils::getBaseWrappedCanvas(SkCanvas* canvas) {
