@@ -114,7 +114,9 @@ enum DrawType {
     DRAW_IMAGE_LATTICE2,
     DRAW_EDGEAA_IMAGE_SET2,
 
-    LAST_DRAWTYPE_ENUM = DRAW_EDGEAA_IMAGE_SET2,
+    RESET_CLIP,
+
+    LAST_DRAWTYPE_ENUM = RESET_CLIP,
 };
 
 enum DrawVertexFlags {
