@@ -6,7 +6,9 @@ This file includes a list of high level updates for each milestone release.
 
 Milestone 94
 ------------
-  *
+  * Added virtual onResetClip() to SkCanvas for Android Framework, to emulate the soon-to-be-removed
+    expanding clip ops guarded by SK_SUPPORT_DEPRECATED_CLIPOPS.
+    https://review.skia.org/430897
 
 * * *
 
